# ict9-interactor-widget-service

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  deps.py  main.py  models.py  schemas.py  services.py
docs/: README.md  api_reference.md  configuration.md  database_models.md  installation.md  usage.md
